# Distributed_Hetrogeneous_Training

./: .gitignore  HOW_IT_WORKS.md  README.md  context.txt  dataset.py  generate_proto.sh  hardware_probe.py  leader.py  pyproject.toml  requirements.txt  run_experiments.py  run_recorder.py  test_e2e.py  watch_cluster.py  worker.py
cli/: leader_cli.py  worker_cli.py
docs/: HOW_IT_WORKS.md  architecture.md  deployment.md  index.html
examples/lab01_single_worker/: README.md
examples/lab02_two_workers/: README.md
examples/lab03_topk_compression/: README.md
proto/: trainer.proto  trainer_pb2.py  trainer_pb2_grpc.py
scripts/: generate_proto.sh  worker_macos.sh  worker_windows.ps1  worker_windows.sh
tests/: conftest.py  test_e2e.py
trainer/core/: errors.py  logging.py
trainer/dashboard/: __init__.py  server.py
trainer/dashboard/static/: common.css  dashboard.js  index.html  leader.html  watch.html  worker.html
trainer/data/: __init__.py  cifar10.py  tinyimagenet.py
trainer/leader/: core.py  server.py  service.py  worker_state.py
trainer/utils/: __init__.py  hardware.py  recorder.py
trainer/worker/: bootstrap.py  connection.py  gradients.py  heartbeat.py  proto_helpers.py  runner.py  synthetic_data.py  training_loop.py
